# cosmic-ext-applet-sysmon

./: CLAUDE.md  Cargo.toml  README.md  justfile  package.nix
docs/: iced-tiny-skia-canvas-damage-bug.md
i18n/en/: cosmic_ext_applet_vitals.ftl
resources/: app.desktop  app.metainfo.xml
src/: applet.rs  config.rs  views.rs
src/components/: gpu.rs  run.rs
