[package]
name = "cosmic-ext-applet-sysmon"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A system monitor applet for the COSMIC desktop"

[dependencies]
i18n-embed-fl = "0.10"
nvml-wrapper = "0.11.0"
rust-embed = "8.11.0"
serde = "1"
sysinfo = "0.38.0"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
# TODO: Switch back to pop-os/libcosmic once the tiny_skia Canvas damage fix is upstreamed
# Tracking: https://github.com/pop-os/iced/issues/XXX (upstream PR pending)
git = "https://github.com/bgub/libcosmic.git"
branch = "fix/tiny-skia-canvas-damage"
default-features = false
features = ["applet"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
