[package]
name = "cosmic-ext-applet-sysmon"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A system monitor applet for the COSMIC desktop"

[dependencies]
i18n-embed-fl = "0.10"
nvml-wrapper = "0.11.0"
rust-embed = "8.11.0"
serde = "1"
sysinfo = "0.38.0"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet"]

[patch."https://github.com/pop-os/libcosmic.git"]
iced = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_runtime = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_renderer = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_core = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_widget = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_futures = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_accessibility = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_tiny_skia = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_winit = { git = "https://github.com/pop-os/iced.git", branch = "master" }
iced_wgpu = { git = "https://github.com/pop-os/iced.git", branch = "master" }
